--- a/login.html
+++ b/login.html
@@ -1,48 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-</head>
-<body>
-
-   
+  </head>
+  <body>
     <script>
-        //create element
-        const title = document.createElement("h1");
-        const form = document.createElement("form");
-        
+      //create element
+      const title = document.createElement("h1");
+      const form = document.createElement("form");
 
-        title.innerText = "Login";
-        form.innerHTML = ` <form>
-        <input type="email" name="mail" id="mail" placeholder="Email"> <br>
+      title.innerText = "Login";
+      form.innerHTML = ` <form>
+        <input type="email" name="email" id="email" placeholder="Email"> <br>
         <input type="password" name="password" id="password" placeholder="Password"> <br>
         <button type="submit" id="btn">ACCEDI ORA</button>
          </form>`;
 
+      document.body.appendChild(title);
+      document.body.appendChild(form);
+      const email = document.getElementById("email");
+      const password = document.getElementById("password");
+      const button = document.getElementById("btn");
+      const body = document.querySelector("body");
+      //style
+      title.style.textAlign = "center";
+      form.style.textAlign = "center";
+      body.style.marginTop = "15%";
+      email.style.marginBottom = "20px";
+      email.style.width = "360px";
+      email.style.height = "25px";
+      password.style.marginBottom = "20px";
+      password.style.width = "360px";
+      password.style.height = "25px";
+      button.style.backgroundColor = "blue";
+      button.style.color = "white";
+      button.style.width = "370px";
+      button.style.height = "35px";
 
-         document.body.appendChild(title);
-        document.body.appendChild(form);
-        const mail = document.getElementById("mail");
-        const password = document.getElementById("password");
-        const button = document.getElementById("btn");
-        const body = document.querySelector("body");
-        //style
-        title.style.textAlign = "center";
-        form.style.textAlign = "center";
-        body.style.marginTop = "15%";
-        mail.style.marginBottom = "20px";
-        mail.style.width = "360px";
-        mail.style.height = "25px";
-        password.style.marginBottom = "20px";
-        password.style.width = "360px";
-        password.style.height = "25px";
-        button.style.backgroundColor = "blue";
-        button.style.color = "white";
-        button.style.width = "370px";
-        button.style.height = "35px";
+      //fetch
+
+      form.addEventListener("submit", fetchingProcess);
+
+      async function fetchingProcess() {
+        event.preventDefault();
+        let input = document.querySelectorAll("input");
+        let users = {};
+        for (i = 0; i < input.length; i++) {
+          let inputId = input[i].id;
+          let inputValues = input[i].value;
+          users[inputId] = inputValues;
+        }
+        console.log(users);
+        const response = await fetch(
+          "https://api-nodejs-todolist.herokuapp.com/user/login",
+          {
+            method: "POST",
+            headers: { "Content-Type": "application/json; charset=utf-8" },
+            body: JSON.stringify(users),
+          }
+        );
+        const result = await response.json();
+        console.log(result);
+      }
     </script>
-</body>
+  </body>
 </html>
