--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
 
         title.innerText = "Registrati";
         form.innerHTML = ` <form id="form">
-        <input type="email" name="mail" id="mail" placeholder="Email"> <br>
+        <input type="email" name="email" id="email" placeholder="Email"> <br>
         <input type="password" name="password" id="password" placeholder="Password"> <br>
         <input type="text" name="name" id="name" placeholder="Nome"> <br>
         <input type="text" name="age" id="age" placeholder="Età"> <br>
@@ -29,7 +29,7 @@
         document.body.appendChild(title);
         document.body.appendChild(form);
         const body = document.querySelector("body");
-        const mail = document.getElementById("mail");
+        const mail = document.getElementById("email");
         const password = document.getElementById("password");
         const button = document.getElementById("btn");
         const name = document.getElementById("name");
@@ -40,11 +40,11 @@
         form.style.textAlign = "center";
         body.style.marginTop = "10%";
         body.style.fontFamily = "Sans-Serif";
-        mail.style.marginBottom = "20px";
-        mail.style.width = "344px";
-        mail.style.height = "25px";
-        mail.style.border = "1px solid grey";
-        mail.style.paddingLeft = "20px";
+        email.style.marginBottom = "20px";
+        email.style.width = "344px";
+        email.style.height = "25px";
+        email.style.border = "1px solid grey";
+        email.style.paddingLeft = "20px";
         password.style.marginBottom = "20px";
         password.style.width = "344px";
         password.style.height = "25px";
@@ -80,12 +80,12 @@
                 person[inputId] = inputValues;
             }
             console.log(person);
-            const Response = await fetch("https://api-nodejs-todolist.herokuapp.com/user/register", {
+            const response = await fetch("https://api-nodejs-todolist.herokuapp.com/user/register", {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json; charset=utf-8' },
                 body: JSON.stringify(person),
             });
-            const result = await Response.json();
+            const result = await response.json();
             console.log(result);
         };
 
