add:fixed-register-structure-2

--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
         document.body.appendChild(title);
         document.body.appendChild(form);
         const body = document.querySelector("body");
-        const mail = document.getElementById("email");
+        const email = document.getElementById("email");
         const password = document.getElementById("password");
         const button = document.getElementById("btn");
         const name = document.getElementById("name");
