--- a/register.html
+++ b/register.html
@@ -10,83 +10,91 @@
 
 <body>
 </body>
+
+<script>
+    //create element
+    const title = document.createElement("h1");
+    const form = document.createElement("form");
+
+    title.innerText = "Registrati";
+    form.innerHTML = ` <form id="form">
+    <input type="email" name="email" id="email" placeholder="Email"> <br>
+    <input type="password" name="password" id="password" placeholder="Password"> <br>
+    <input type="text" name="name" id="name" placeholder="Nome"> <br>
+    <input type="text" name="age" id="age" placeholder="Età"> <br>
+    <button type="submit" id="btn">Registrati ora</button>
+     </form>`;
+
+    document.body.appendChild(title);
+    document.body.appendChild(form);
+    const body = document.querySelector("body");
+    const email = document.getElementById("email");
+    const password = document.getElementById("password");
+    const button = document.getElementById("btn");
+    const name = document.getElementById("name");
+    const age = document.getElementById("age");
+
+    //style
+    title.style.textAlign = "center";
+    form.style.textAlign = "center";
+    body.style.marginTop = "10%";
+    body.style.fontFamily = "Sans-Serif";
+    //email
+    email.style.marginBottom = "20px";
+    email.style.width = "344px";
+    email.style.height = "25px";
+    email.style.border = "1px solid grey";
+    email.style.paddingLeft = "20px";
+    //password
+    password.style.marginBottom = "20px";
+    password.style.width = "344px";
+    password.style.height = "25px";
+    password.style.border = "1px solid grey";
+    password.style.paddingLeft = "20px";
+    //name
+    name.style.marginBottom = "20px";
+    name.style.width = "344px";
+    name.style.height = "25px";
+    name.style.border = "1px solid grey";
+    name.style.paddingLeft = "20px";
+    //age
+    age.style.marginBottom = "20px";
+    age.style.width = "344px";
+    age.style.height = "25px";
+    age.style.border = "1px solid grey";
+    age.style.paddingLeft = "20px";
+    //button
+    button.style.backgroundColor = "blue";
+    button.style.color = "white";
+    button.style.width = "366px";
+    button.style.height = "35px";
+    button.style.border = "none";
+
+    // fetch
+    form.addEventListener("submit", fetchingProcess);
+
+    async function fetchingProcess() {
+        event.preventDefault();
+        let input = document.querySelectorAll("input");
+        let person = {}
+        for (i = 0; i < input.length; i++) {
+            let inputId = input[i].id;
+            let inputValues = input[i].value;
+            person[inputId] = inputValues;
+        }
+        console.log(person);
+        const response = await fetch("https://api-nodejs-todolist.herokuapp.com/user/register", {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json; charset=utf-8' },
+            body: JSON.stringify(person),
+        });
+        const result = await response.json();
+        console.log(result);
+
+        sessionStorage.setItem('token', result.token);
+    };
+
+</script>
 </html>
 
-    <script>
-        //create element
-        const title = document.createElement("h1");
-        const form = document.createElement("form");
-
-        title.innerText = "Registrati";
-        form.innerHTML = ` <form id="form">
-        <input type="email" name="email" id="email" placeholder="Email"> <br>
-        <input type="password" name="password" id="password" placeholder="Password"> <br>
-        <input type="text" name="name" id="name" placeholder="Nome"> <br>
-        <input type="text" name="age" id="age" placeholder="Età"> <br>
-        <button type="submit" id="btn">Registrati ora</button>
-         </form>`;
-
-        document.body.appendChild(title);
-        document.body.appendChild(form);
-        const body = document.querySelector("body");
-        const email = document.getElementById("email");
-        const password = document.getElementById("password");
-        const button = document.getElementById("btn");
-        const name = document.getElementById("name");
-        const age = document.getElementById("age");
-
-        //style
-        title.style.textAlign = "center";
-        form.style.textAlign = "center";
-        body.style.marginTop = "10%";
-        body.style.fontFamily = "Sans-Serif";
-        email.style.marginBottom = "20px";
-        email.style.width = "344px";
-        email.style.height = "25px";
-        email.style.border = "1px solid grey";
-        email.style.paddingLeft = "20px";
-        password.style.marginBottom = "20px";
-        password.style.width = "344px";
-        password.style.height = "25px";
-        password.style.border = "1px solid grey";
-        password.style.paddingLeft = "20px";
-        name.style.marginBottom = "20px";
-        name.style.width = "344px";
-        name.style.height = "25px";
-        name.style.border = "1px solid grey";
-        name.style.paddingLeft = "20px";
-        age.style.marginBottom = "20px";
-        age.style.width = "344px";
-        age.style.height = "25px";
-        age.style.border = "1px solid grey";
-        age.style.paddingLeft = "20px";
-        button.style.backgroundColor = "blue";
-        button.style.color = "white";
-        button.style.width = "366px";
-        button.style.height = "35px";
-        button.style.border = "none";
-
-        // fetch
-
-        form.addEventListener("submit", fetchingProcess);
-
-        async function fetchingProcess() {
-            event.preventDefault();
-            let input = document.querySelectorAll("input");
-            let person = {}
-            for (i = 0; i < input.length; i++) {
-                let inputId = input[i].id;
-                let inputValues = input[i].value;
-                person[inputId] = inputValues;
-            }
-            console.log(person);
-            const response = await fetch("https://api-nodejs-todolist.herokuapp.com/user/register", {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json; charset=utf-8' },
-                body: JSON.stringify(person),
-            });
-            const result = await response.json();
-            console.log(result);
-        };
-
-    </script>
+   
