--- a/login.html
+++ b/login.html
@@ -6,65 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
   </head>
+
   <body>
-    <script>
-      //create element
-      const title = document.createElement("h1");
-      const form = document.createElement("form");
-
-      title.innerText = "Login";
-      form.innerHTML = ` <form>
-        <input type="email" name="email" id="email" placeholder="Email"> <br>
-        <input type="password" name="password" id="password" placeholder="Password"> <br>
-        <button type="submit" id="btn">ACCEDI ORA</button>
-         </form>`;
-
-      document.body.appendChild(title);
-      document.body.appendChild(form);
-      const email = document.getElementById("email");
-      const password = document.getElementById("password");
-      const button = document.getElementById("btn");
-      const body = document.querySelector("body");
-      //style
-      title.style.textAlign = "center";
-      form.style.textAlign = "center";
-      body.style.marginTop = "15%";
-      email.style.marginBottom = "20px";
-      email.style.width = "360px";
-      email.style.height = "25px";
-      password.style.marginBottom = "20px";
-      password.style.width = "360px";
-      password.style.height = "25px";
-      button.style.backgroundColor = "blue";
-      button.style.color = "white";
-      button.style.width = "370px";
-      button.style.height = "35px";
-
-      //fetch
-
-      form.addEventListener("submit", fetchingProcess);
-
-      async function fetchingProcess() {
-        event.preventDefault();
-        let input = document.querySelectorAll("input");
-        let users = {};
-        for (i = 0; i < input.length; i++) {
-          let inputId = input[i].id;
-          let inputValues = input[i].value;
-          users[inputId] = inputValues;
-        }
-        console.log(users);
-        const response = await fetch(
-          "https://api-nodejs-todolist.herokuapp.com/user/login",
-          {
-            method: "POST",
-            headers: { "Content-Type": "application/json; charset=utf-8" },
-            body: JSON.stringify(users),
-          }
-        );
-        const result = await response.json();
-        console.log(result);
-      }
-    </script>
   </body>
+
+  <script>
+    //create element
+    const title = document.createElement("h1");
+    const form = document.createElement("form");
+
+    title.innerText = "Login";
+    form.innerHTML = ` <form>
+      <input type="email" name="email" id="email" placeholder="Email"> <br>
+      <input type="password" name="password" id="password" placeholder="Password"> <br>
+      <button type="submit" id="btn">ACCEDI ORA</button>
+       </form>`;
+
+    document.body.appendChild(title);
+    document.body.appendChild(form);
+    
+    const email = document.getElementById("email");
+    const password = document.getElementById("password");
+    const button = document.getElementById("btn");
+    const body = document.querySelector("body");
+    //style
+    title.style.textAlign = "center";
+    form.style.textAlign = "center";
+    body.style.marginTop = "15%";
+    // Email
+    email.style.marginBottom = "20px";
+    email.style.width = "360px";
+    email.style.height = "25px";
+    // Password 
+    password.style.marginBottom = "20px";
+    password.style.width = "360px";
+    password.style.height = "25px";
+    // Button 
+    button.style.backgroundColor = "blue";
+    button.style.color = "white";
+    button.style.width = "370px";
+    button.style.height = "35px";
+    button.style.border = "none";
+
+    //fetch
+    form.addEventListener("submit", fetchingProcess);
+    form.addEventListener("submit", token);
+
+    async function fetchingProcess() {
+      event.preventDefault();
+      let input = document.querySelectorAll("input");
+      let users = {};
+      for (i = 0; i < input.length; i++) {
+        let inputId = input[i].id;
+        let inputValues = input[i].value;
+        users[inputId] = inputValues;
+      }
+      console.log(users);
+      const response = await fetch(
+        "https://api-nodejs-todolist.herokuapp.com/user/login",
+        {
+          method: "POST",
+          headers: { "Content-Type": "application/json; charset=utf-8" },
+          body: JSON.stringify(users),
+        }
+      );
+      const result = await response.json();
+      console.log(result);
+
+      sessionStorage.setItem('token', result.token);
+    }
+
+    async function token() {
+      const response2 = await fetch('https://api-nodejs-todolist.herokuapp.com/user/me', {
+        Accept: 'application/json',
+        headers: {'Authorization': 'Bearer '}
+      })
+      .then(resp => resp.json())
+      .then(json => console.log(json))
+    };
+  </script>
 </html>
