--- a/login.html
+++ b/login.html
@@ -50,7 +50,6 @@
 
     //fetch
     form.addEventListener("submit", fetchingProcess);
-    form.addEventListener("submit", token);
 
     async function fetchingProcess() {
       event.preventDefault();
@@ -61,7 +60,7 @@
         let inputValues = input[i].value;
         users[inputId] = inputValues;
       }
-      console.log(users);
+      // console.log(users);
       const response = await fetch(
         "https://api-nodejs-todolist.herokuapp.com/user/login",
         {
@@ -73,16 +72,15 @@
       const result = await response.json();
       console.log(result);
 
-      sessionStorage.setItem('token', result.token);
-    }
+      localStorage.setItem('token', result.token);
 
-    async function token() {
-      const response2 = await fetch('https://api-nodejs-todolist.herokuapp.com/user/me', {
+      // user data recovery
+      const responseToken = await fetch('https://api-nodejs-todolist.herokuapp.com/user/me', {
         Accept: 'application/json',
-        headers: {'Authorization': 'Bearer '}
+        headers: {'Authorization': 'Bearer ' + localStorage.getItem('token')}
       })
       .then(resp => resp.json())
       .then(json => console.log(json))
-    };
+    }
   </script>
 </html>
