--- a/register.html
+++ b/register.html
@@ -86,12 +86,10 @@
         const result = await response.json();
         console.log(result);
 
-        sessionStorage.setItem('token', result.token);
+        //location
+        document.location.href = '/login.html';
     };
-
 </script>
-
-
 </html>
 
    
