add:fixed + task6

--- a/login.html
+++ b/login.html
@@ -60,7 +60,6 @@
         let inputValues = input[i].value;
         users[inputId] = inputValues;
       }
-      // console.log(users);
       const response = await fetch(
         "https://api-nodejs-todolist.herokuapp.com/user/login",
         {
@@ -73,6 +72,9 @@
       console.log(result);
 
      sessionStorage.setItem('token', result.token);
+     sessionStorage.setItem('email', result.user.email);
+     sessionStorage.setItem('age', result.user.age);
+     sessionStorage.setItem('name', result.user.name);
 
       // user data recovery
       const responseToken = await fetch('https://api-nodejs-todolist.herokuapp.com/user/me', {
@@ -83,7 +85,7 @@
       .then(json => console.log(json))
 
       //location
-      document.location.href = '/logout.html';
+      document.location.href = './logout.html';
     }
   </script>
 </html>
